# grokking_algorithms

./: README.md  pyproject.toml  setup.cfg
src/grokking_algorithms/: expression_formatter.py  formulex.py  main.py  sorting.py
src/grokking_algorithms/linked_lists/: single_linked_list.py
src/grokking_algorithms/stacks/: linter.py
tests/: test_formulex.py  test_linter.py  test_main.py  test_single_linked_list.py  test_sorting.py
