[metadata]
name = grokking_algorithms
version = 0.1.0
description = A project to explore and implement various algorithms.
author = KrishnaMohan Seelam
author_email = krishnamohan.seelam@outlook.com
url = https://github.com/krishnamohan-seelam/grokking_algorithms
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    # List your dependencies here, e.g.:
    # numpy
    # pandas

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov